@@ -548,8 +548,6 @@ argument_list|(
 name|core
 argument_list|,
 literal|"DirectUpdateHandler2"
-argument_list|,
-literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -836,8 +834,6 @@ argument_list|(
 name|core
 argument_list|,
 literal|"DirectUpdateHandler2"
-argument_list|,
-name|forceNewDir
 argument_list|)
 expr_stmt|;
 name|log
@@ -901,9 +897,6 @@ name|core
 parameter_list|,
 name|String
 name|name
-parameter_list|,
-name|boolean
-name|forceNewDirectory
 parameter_list|)
 throws|throws
 name|IOException
@@ -948,8 +941,6 @@ name|core
 operator|.
 name|getCodec
 argument_list|()
-argument_list|,
-name|forceNewDirectory
 argument_list|)
 return|;
 block|}
