@@ -785,8 +785,6 @@ name|core
 operator|.
 name|getCodec
 argument_list|()
-argument_list|,
-literal|true
 argument_list|)
 expr_stmt|;
 block|}
