@@ -169,21 +169,6 @@ name|Tracker
 argument_list|>
 argument_list|()
 decl_stmt|;
-DECL|field|oldDirs
-specifier|private
-name|List
-argument_list|<
-name|Tracker
-argument_list|>
-name|oldDirs
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|Tracker
-argument_list|>
-argument_list|()
-decl_stmt|;
 DECL|field|stop
 specifier|private
 specifier|volatile
@@ -464,72 +449,6 @@ name|dirs
 operator|.
 name|values
 argument_list|()
-control|)
-block|{
-name|int
-name|cnt
-init|=
-name|tracker
-operator|.
-name|refCnt
-operator|.
-name|get
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|cnt
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|tracker
-operator|.
-name|refCnt
-operator|.
-name|decrementAndGet
-argument_list|()
-expr_stmt|;
-name|df
-operator|.
-name|release
-argument_list|(
-name|tracker
-operator|.
-name|dir
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-name|sz
-operator|=
-name|oldDirs
-operator|.
-name|size
-argument_list|()
-expr_stmt|;
-if|if
-condition|(
-name|sz
-operator|>
-literal|0
-condition|)
-block|{
-for|for
-control|(
-name|Tracker
-name|tracker
-range|:
-name|oldDirs
 control|)
 block|{
 name|int
@@ -999,95 +918,6 @@ expr_stmt|;
 block|}
 else|else
 block|{
-if|if
-condition|(
-name|random
-operator|.
-name|nextInt
-argument_list|(
-literal|10
-argument_list|)
-operator|>
-literal|6
-condition|)
-block|{
-name|Tracker
-name|oldTracker
-init|=
-operator|new
-name|Tracker
-argument_list|()
-decl_stmt|;
-name|oldTracker
-operator|.
-name|refCnt
-operator|=
-operator|new
-name|AtomicInteger
-argument_list|(
-name|tracker
-operator|.
-name|refCnt
-operator|.
-name|get
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|oldTracker
-operator|.
-name|path
-operator|=
-name|tracker
-operator|.
-name|path
-expr_stmt|;
-name|oldTracker
-operator|.
-name|dir
-operator|=
-name|tracker
-operator|.
-name|dir
-expr_stmt|;
-name|oldDirs
-operator|.
-name|add
-argument_list|(
-name|oldTracker
-argument_list|)
-expr_stmt|;
-name|tracker
-operator|.
-name|dir
-operator|=
-name|df
-operator|.
-name|get
-argument_list|(
-name|path
-argument_list|,
-name|DirContext
-operator|.
-name|DEFAULT
-argument_list|,
-literal|null
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|tracker
-operator|.
-name|refCnt
-operator|=
-operator|new
-name|AtomicInteger
-argument_list|(
-literal|0
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
 name|tracker
 operator|.
 name|dir
@@ -1105,7 +935,6 @@ argument_list|,
 literal|null
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 name|tracker
 operator|.
